refactor ocl2smt tests